--- a/Assignment2/Q1.html
+++ b/Assignment2/Q1.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+   
+    <title>My Blog</title> 
+</head> 
+<body> 
+    <header> 
+        <h1 style="text-transform: uppercase;">Hey this is my blog </h1> 
+        <nav> 
+            <ul> 
+                <li><a href="#home">Home</a></li> 
+                <li><a href="#about">About</a></li> 
+                <li><a href="#contact">Contact</a></li> 
+            </ul> 
+        </nav> 
+    </header>
+    <main> 
+        <article> 
+            <h2>The current war AC vs DC</h2> 
+            <p><strong>Author:</strong> Afnan Kaif | <strong>Date:</strong> December 20, 2024</p> 
+            <section> 
+                <h3>Introduction</h3> 
+                <p>this is the clash between the electricity phenomenon of alternting current and direct cureent between Thomas Edison and Nickola Tesal</p> 
+                <p>In this post, we’ll explore some of the most stunning debates worth paying attention to .</p> 
+            </section> 
+            <section> 
+                <h3>Key Takeaways</h3> 
+                <ul> 
+                    <li>Travel broadens perspectives and enriches the soul.</li> 
+                    <li>Nature offers a calming escape from daily life.</li> 
+                    <li>Preserving the environment is crucial for future generations.</li> 
+                </ul> 
+            </section> 
+        </article> 
+ 
+
+<aside> 
+    <h3>Related Posts</h3> 
+    <ul> 
+        <li><a href="#post1">Top 10 Hiking Trails in the World</a></li> 
+        <li><a href="#post2">Best Beaches to Visit in 2024</a></li> 
+        <li><a href="#post3">How to Pack for a Nature Adventure</a></li> 
+    </ul> 
+</aside> 
+</main> 
+ 
+<footer> 
+<p>&copy; 2024 My Blog | Follow us on  
+    <a href="https://twitter.com">Twitter</a>,  
+    <a href="https://facebook.com">Facebook</a> 
+</p> 
+</footer> 
+</body> 
+</html> 
+
+
+
+
 
