--- a/Assignment2/q2.html
+++ b/Assignment2/q2.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>Question 2</title>
+</head>
+<body>
+
+    <header>
+        <h1>Product Catalog</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#electronics">Electronics</a></li>
+            <li><a href="#fashion">Fashion</a></li>
+            <li><a href="#groceries">Groceries</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <article>
+            <img src="https://plus.unsplash.com/premium_photo-1681160405580-a68e9c4707f9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGxhcHRvcHxlbnwwfHwwfHx8MA%3D%3D" alt="Smartphone">
+            <h3>Laptop</h3>
+            <p>Latest model with advanced features, including a sleek design,Oled display and fast processor.</p>
+            <ul>
+                <li>Discount Price: $499</li>
+                <li>Original Price: $599</li>
+            </ul>
+        </article>
+
+        <article>
+            <img src="https://images.unsplash.com/photo-1579446650032-86effeeb3389?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8c25lYWtlcnN8ZW58MHx8MHx8fDA%3D" alt="Stylish Jacket">
+            <h3>Running kicks</h3>
+            <p>Comfortable and stylish sneakers, perfect for the sports and outdoor activity.</p>
+            <ul>
+                <li>Discount Price: $129</li>
+                <li>Original Price: $159</li>
+            </ul>
+        </article>
+
+        <article>
+            <img src="https://images.unsplash.com/photo-1474979266404-7eaacbcd87c5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHZlZ2V0YWJsZSUyMG9pbHxlbnwwfHwwfHx8MA%3D%3D" alt="Organic Olive Oil">
+            <h3>Organic Olive Oil</h3>
+            <p>High-quality extra virgin olive oil, perfect for your cooking needs.</p>
+            <ul>
+                <li>Discount Price: $19.99</li>
+                <li>Original Price: $24.99</li>
+            </ul>
+        </article>
+    </section>
+
+    <footer>
+        <p>Terms and Conditions | <a href="contact.html">Contact Us</a></p>
+    </footer>
+
+</body>
+</html>
 
