--- a/Assignment2/q3.html
+++ b/Assignment2/q3.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+    
+    <header>
+        <h1>Shaik Gounda Afnan Kaif</h1>
+        <nav>
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about-me">
+        <h2>About Me</h2>
+        <p>I am a web developer with a passion for coding and problem-solving. I love learning new technologies and building meaningful projects.</p>
+
+        <aside>
+            <h3>Hobbies</h3>
+            <ul>
+                <li>Painting</li>
+                <li>Reading</li>
+                <li>Programming</li>
+            </ul>
+            <img src="https://images.unsplash.com/photo-1507081323647-4d250478b919?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D" alt="Profile Picture">
+        </aside>
+    </section>
+
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ol>
+            <li><a href="project1.html">E commerce website</a></li>
+            <li><a href="project2.html">Social media clone</a></li>
+            <li><a href="project3.html">movie streaming website</a></li>
+        </ol>
+    </section>
+
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out to me via email or connect with me on LinkedIn!</p>
+    </section>
+
+
+    <footer>
+        <ul>
+            <li><a href="https://github.com/random">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/random">LinkedIn</a></li>
+            <li><a href="random@example.com">Email</a></li>
+        </ul>
+    </footer>
+
+</body>
+</html>
 
