--- a/Assignment2/Q8about.html
+++ b/Assignment2/Q8about.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+</head>
+<body>
 
+    <header>
+        <h1>Website Logo</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>my Story</h2>
+            <p>We started our journey 2 years ago with the mission to provide exceptional services to our customers. we have grown and evolved, but our commitment to quality remains unchanged.</p>
+        </section>
+
+    
+        <section>
+            <h3>Our Achievements</h3>
+            <ul>
+                <li>Founded in 2022</li>
+                <li>Reached 1,000,000 customers in 2023</li>
+                <li>Expanded into three new countries in 2024</li>
+                <li>Winner of the Excellence in Service Award (2023)</li>
+            </ul>
+        </section>
+    </main>
+
+
+    <footer>
+        <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
